[gd_scene load_steps=15 format=3 uid="uid://c0e87hyn7j48d"]

[ext_resource type="Script" path="res://scripts/new_password.gd" id="1_vgvu0"]
[ext_resource type="Texture2D" uid="uid://cg483dwdrktcw" path="res://assets/images/back.png" id="2_cnj2e"]
[ext_resource type="Texture2D" uid="uid://by8n8uapqyxmx" path="res://assets/images/clown.png" id="3_dx3kj"]
[ext_resource type="StyleBox" uid="uid://wem08rsh1cos" path="res://assets/styleBox/signUp_input_focus.tres" id="4_17aj4"]
[ext_resource type="Texture2D" uid="uid://bu1jy0clvmo3y" path="res://assets/images/fermer.png" id="4_p0mf1"]
[ext_resource type="StyleBox" uid="uid://cbkuxplawvtce" path="res://assets/styleBox/signUp_input.tres" id="5_n4apj"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="5_s3xa8"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="6_rj47g"]
[ext_resource type="Texture2D" uid="uid://ccdw5btr66au7" path="res://assets/images/visibility/visible.png" id="6_rwptb"]
[ext_resource type="StyleBox" uid="uid://ccqgv0dsve6l0" path="res://assets/styleBox/logIn_button_hover.tres" id="9_qtmg2"]
[ext_resource type="StyleBox" uid="uid://dsmipxadgfpou" path="res://assets/styleBox/logIn_button_normal.tres" id="10_6pm0i"]
[ext_resource type="PackedScene" uid="uid://cxe2j8yylr24h" path="res://scenes/popUp.tscn" id="11_eykjs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2nnu"]
bg_color = Color(0.152941, 0.14902, 0.14902, 0.780392)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ve66u"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_bottom_left = 7
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 3
shadow_offset = Vector2(-2, 2)

[node name="Control" type="Control"]
process_mode = 3
z_index = 5
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 170.0
offset_right = -325.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vgvu0")

[node name="ShadowBox2" type="Label" parent="."]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = 1.0
offset_right = 1283.0
offset_bottom = 815.0
theme_override_styles/normal = SubResource("StyleBoxFlat_w2nnu")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.248
anchor_top = -0.21
anchor_right = 1.256
anchor_bottom = 1.14
offset_left = -9.80002
offset_top = -8.0
offset_right = 4.59998
offset_bottom = 5.99994
color = Color(0, 0, 0, 0.501961)

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
color = Color(0.729412, 0.215686, 0.215686, 1)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
texture = ExtResource("2_cnj2e")
expand_mode = 1

[node name="logo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 478.0
offset_top = 32.0
offset_right = 808.0
offset_bottom = 307.0
texture = ExtResource("3_dx3kj")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
offset_left = 400.0
offset_top = 442.0
offset_right = 900.0
offset_bottom = 633.0
theme_override_constants/separation = 30

[node name="password" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("4_17aj4")
theme_override_styles/normal = ExtResource("5_n4apj")
placeholder_text = "     New Password"
secret = true

[node name="visibility_button" type="Button" parent="VBoxContainer/password"]
layout_mode = 0
offset_left = 444.0
offset_top = 20.0
offset_right = 494.0
offset_bottom = 69.0
icon = ExtResource("6_rwptb")
flat = true
expand_icon = true

[node name="confirmPassword" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("4_17aj4")
theme_override_styles/normal = ExtResource("5_n4apj")
placeholder_text = "     Confirm Password"
secret = true

[node name="visibility_button2" type="Button" parent="VBoxContainer/confirmPassword"]
layout_mode = 0
offset_left = 444.0
offset_top = 20.0
offset_right = 494.0
offset_bottom = 69.0
icon = ExtResource("6_rwptb")
flat = true
expand_icon = true

[node name="Control" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 781.0
offset_right = 821.0
offset_bottom = 38.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ve66u")

[node name="CancelButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
icon = ExtResource("4_p0mf1")
flat = true
expand_icon = true

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 306.0
offset_right = 836.0
offset_bottom = 394.0
theme_override_colors/font_color = Color(0.051971, 0.051971, 0.051971, 0.831373)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("5_s3xa8")
theme_override_font_sizes/font_size = 70
text = "New Password"

[node name="confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 682.0
offset_right = 786.0
offset_bottom = 757.0
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rj47g")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = ExtResource("9_qtmg2")
theme_override_styles/normal = ExtResource("10_6pm0i")
text = "Confirm"

[node name="popUp_error" parent="." instance=ExtResource("11_eykjs")]
visible = false
z_index = 1
offset_left = 290.0
offset_top = 406.0
offset_right = 990.0
offset_bottom = 626.0

[node name="HTTPRequest_newpass" type="HTTPRequest" parent="."]

[node name="password_check" type="Label" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 523.0
offset_right = 842.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Has to contain a-z, A-Z, 0-9 and a special char"

[connection signal="text_changed" from="VBoxContainer/password" to="." method="_on_password_text_changed"]
[connection signal="pressed" from="VBoxContainer/password/visibility_button" to="." method="_on_visibility_button_pressed"]
[connection signal="pressed" from="VBoxContainer/confirmPassword/visibility_button2" to="." method="_on_visibility_button_2_pressed"]
[connection signal="pressed" from="Control/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="confirm" to="." method="_on_confirm_pressed"]
